[package]
name = "uci_manipulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
mlua = { version = "0.5", features = ["lua51"] }
rust-uci = "0.1.5"
